Use the libvips GObject API to generate and call operations (#43)